[lw5] experiment: reusing primitive class tests to generate Q descriptors